// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button 不可用状态 1`] = `
<xl-button
  disabled={true}
  onClick={[MockFunction]}
>
  <button
    className="xl-button xl-button--default xl-button--size-default xl-button--disabled"
    disabled={true}
    onClick={[Function]}
  >
    <span
      key=".0"
    >
      button
    </span>
  </button>
</xl-button>
`;

exports[`Button 不同尺寸的按钮 1`] = `
<div>
  <xl-button
    size="small"
  >
    <button
      className="xl-button xl-button--default xl-button--size-small"
      onClick={[Function]}
    >
      <span
        key=".0"
      >
        Default
      </span>
    </button>
  </xl-button>
  <xl-button
    size="default"
  >
    <button
      className="xl-button xl-button--default xl-button--size-default"
      onClick={[Function]}
    >
      <span
        key=".0"
      >
        Default
      </span>
    </button>
  </xl-button>
  <xl-button
    size="large"
  >
    <button
      className="xl-button xl-button--default xl-button--size-large"
      onClick={[Function]}
    >
      <span
        key=".0"
      >
        Default
      </span>
    </button>
  </xl-button>
</div>
`;

exports[`Button 加载中 1`] = `
<xl-button
  loading={true}
  onClick={[MockFunction]}
>
  <button
    className="xl-button xl-button--default xl-button--size-default xl-button--loading"
    onClick={[Function]}
  >
    <xl-fas-circle-notch
      className="xl-button__icon"
      spin={true}
    >
      <Memo(xl-icon)
        className="xl-button__icon"
        spin={true}
      >
        <i
          className="xl-icon xl-icon--spin xl-button__icon"
          style={Object {}}
        >
          <svg
            fill="currentColor"
            style={
              Object {
                "height": "1em",
                "width": "1em",
              }
            }
            viewBox="0 0 512 512"
          >
            <path
              d="M288 39.056v16.659c0 10.804 7.281 20.159 17.686 23.066C383.204 100.434 440 171.518 440 256c0 101.689-82.295 184-184 184-101.689 0-184-82.295-184-184 0-84.47 56.786-155.564 134.312-177.219C216.719 75.874 224 66.517 224 55.712V39.064c0-15.709-14.834-27.153-30.046-23.234C86.603 43.482 7.394 141.206 8.003 257.332c.72 137.052 111.477 246.956 248.531 246.667C393.255 503.711 504 392.788 504 256c0-115.633-79.14-212.779-186.211-240.236C302.678 11.889 288 23.456 288 39.056z"
            />
          </svg>
        </i>
      </Memo(xl-icon)>
    </xl-fas-circle-notch>
    <span
      key=".0"
    >
      button
    </span>
  </button>
</xl-button>
`;

exports[`Button 幽灵状态 1`] = `
<xl-button
  ghost={true}
>
  <button
    className="xl-button xl-button--default xl-button--size-default xl-button--ghost"
    onClick={[Function]}
  >
    <span
      key=".0"
    >
      Default
    </span>
  </button>
</xl-button>
`;

exports[`Button 指定href 1`] = `
<xl-button
  href="#"
>
  <a
    className="xl-button xl-button--default xl-button--size-default"
    href="#"
    onClick={[Function]}
  >
    <span
      key=".0"
    >
      Default
    </span>
  </a>
</xl-button>
`;

exports[`Button 指定type 1`] = `
<div>
  <xl-button>
    <button
      className="xl-button xl-button--default xl-button--size-default"
      onClick={[Function]}
    >
      <span
        key=".0"
      >
        button
      </span>
    </button>
  </xl-button>
  <xl-button
    type="default"
  >
    <button
      className="xl-button xl-button--default xl-button--size-default"
      onClick={[Function]}
    >
      <span
        key=".0"
      >
        button
      </span>
    </button>
  </xl-button>
  <xl-button
    type="primary"
  >
    <button
      className="xl-button xl-button--primary xl-button--size-default"
      onClick={[Function]}
    >
      <span
        key=".0"
      >
        button
      </span>
    </button>
  </xl-button>
  <xl-button
    type="success"
  >
    <button
      className="xl-button xl-button--success xl-button--size-default"
      onClick={[Function]}
    >
      <span
        key=".0"
      >
        button
      </span>
    </button>
  </xl-button>
  <xl-button
    type="error"
  >
    <button
      className="xl-button xl-button--error xl-button--size-default"
      onClick={[Function]}
    >
      <span
        key=".0"
      >
        button
      </span>
    </button>
  </xl-button>
  <xl-button
    type="warning"
  >
    <button
      className="xl-button xl-button--warning xl-button--size-default"
      onClick={[Function]}
    >
      <span
        key=".0"
      >
        button
      </span>
    </button>
  </xl-button>
  <xl-button
    type="text"
  >
    <button
      className="xl-button xl-button--text xl-button--size-default"
      onClick={[Function]}
    >
      <span
        key=".0"
      >
        button
      </span>
    </button>
  </xl-button>
</div>
`;

exports[`Button 指定按钮形状 1`] = `
<div>
  <xl-button
    shape="round"
  >
    <button
      className="xl-button xl-button--default xl-button--round xl-button--size-default"
      onClick={[Function]}
    >
      <span
        key=".0"
      >
        button
      </span>
    </button>
  </xl-button>
  <xl-button
    shape="circle"
  >
    <button
      className="xl-button xl-button--default xl-button--circle xl-button--size-default"
      onClick={[Function]}
    >
      <span
        key=".0"
      >
        button
      </span>
    </button>
  </xl-button>
</div>
`;

exports[`Button 按钮中使用icon 1`] = `
<div>
  <xl-button>
    <button
      className="xl-button xl-button--default xl-button--size-default"
      onClick={[Function]}
    >
      <xl-fas-power-off
        key=".0"
      >
        <Memo(xl-icon)>
          <i
            className="xl-icon"
            style={Object {}}
          >
            <svg
              fill="currentColor"
              style={
                Object {
                  "height": "1em",
                  "width": "1em",
                }
              }
              viewBox="0 0 512 512"
            >
              <path
                d="M400 54.1c63 45 104 118.6 104 201.9 0 136.8-110.8 247.7-247.5 248C120 504.3 8.2 393 8 256.4 7.9 173.1 48.9 99.3 111.8 54.2c11.7-8.3 28-4.8 35 7.7L162.6 90c5.9 10.5 3.1 23.8-6.6 31-41.5 30.8-68 79.6-68 134.9-.1 92.3 74.5 168.1 168 168.1 91.6 0 168.6-74.2 168-169.1-.3-51.8-24.7-101.8-68.1-134-9.7-7.2-12.4-20.5-6.5-30.9l15.8-28.1c7-12.4 23.2-16.1 34.8-7.8zM296 264V24c0-13.3-10.7-24-24-24h-32c-13.3 0-24 10.7-24 24v240c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24z"
              />
            </svg>
          </i>
        </Memo(xl-icon)>
      </xl-fas-power-off>
      <span
        key=".1"
      >
        Default
      </span>
    </button>
  </xl-button>
  <xl-button
    size="default"
  >
    <button
      className="xl-button xl-button--default xl-button--size-default"
      onClick={[Function]}
    >
      <span
        key=".0"
      >
        Default 
      </span>
      <xl-fas-power-off
        key=".1"
      >
        <Memo(xl-icon)>
          <i
            className="xl-icon"
            style={Object {}}
          >
            <svg
              fill="currentColor"
              style={
                Object {
                  "height": "1em",
                  "width": "1em",
                }
              }
              viewBox="0 0 512 512"
            >
              <path
                d="M400 54.1c63 45 104 118.6 104 201.9 0 136.8-110.8 247.7-247.5 248C120 504.3 8.2 393 8 256.4 7.9 173.1 48.9 99.3 111.8 54.2c11.7-8.3 28-4.8 35 7.7L162.6 90c5.9 10.5 3.1 23.8-6.6 31-41.5 30.8-68 79.6-68 134.9-.1 92.3 74.5 168.1 168 168.1 91.6 0 168.6-74.2 168-169.1-.3-51.8-24.7-101.8-68.1-134-9.7-7.2-12.4-20.5-6.5-30.9l15.8-28.1c7-12.4 23.2-16.1 34.8-7.8zM296 264V24c0-13.3-10.7-24-24-24h-32c-13.3 0-24 10.7-24 24v240c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24z"
              />
            </svg>
          </i>
        </Memo(xl-icon)>
      </xl-fas-power-off>
    </button>
  </xl-button>
  <xl-button
    size="large"
  >
    <button
      className="xl-button xl-button--default xl-button--size-large"
      onClick={[Function]}
    >
      <xl-fas-power-off
        key=".0"
      >
        <Memo(xl-icon)>
          <i
            className="xl-icon"
            style={Object {}}
          >
            <svg
              fill="currentColor"
              style={
                Object {
                  "height": "1em",
                  "width": "1em",
                }
              }
              viewBox="0 0 512 512"
            >
              <path
                d="M400 54.1c63 45 104 118.6 104 201.9 0 136.8-110.8 247.7-247.5 248C120 504.3 8.2 393 8 256.4 7.9 173.1 48.9 99.3 111.8 54.2c11.7-8.3 28-4.8 35 7.7L162.6 90c5.9 10.5 3.1 23.8-6.6 31-41.5 30.8-68 79.6-68 134.9-.1 92.3 74.5 168.1 168 168.1 91.6 0 168.6-74.2 168-169.1-.3-51.8-24.7-101.8-68.1-134-9.7-7.2-12.4-20.5-6.5-30.9l15.8-28.1c7-12.4 23.2-16.1 34.8-7.8zM296 264V24c0-13.3-10.7-24-24-24h-32c-13.3 0-24 10.7-24 24v240c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24z"
              />
            </svg>
          </i>
        </Memo(xl-icon)>
      </xl-fas-power-off>
    </button>
  </xl-button>
</div>
`;

exports[`Button 长按钮 1`] = `
<xl-button
  long={true}
>
  <button
    className="xl-button xl-button--default xl-button--size-default xl-button--long"
    onClick={[Function]}
  >
    <span
      key=".0"
    >
      Default
    </span>
  </button>
</xl-button>
`;

exports[`ButtonGroup 垂直按钮组 1`] = `
<div>
  <xl-button-group
    vertical={true}
  >
    <div
      className="xl-button-group xl-button-group--vertical"
    >
      <xl-button>
        <button
          className="xl-button xl-button--default xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Default
          </span>
        </button>
      </xl-button>
      <xl-button
        type="primary"
      >
        <button
          className="xl-button xl-button--primary xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Primary
          </span>
        </button>
      </xl-button>
      <xl-button
        type="success"
      >
        <button
          className="xl-button xl-button--success xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Success
          </span>
        </button>
      </xl-button>
      <xl-button
        type="warning"
      >
        <button
          className="xl-button xl-button--warning xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Warning
          </span>
        </button>
      </xl-button>
      <xl-button
        type="error"
      >
        <button
          className="xl-button xl-button--error xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
      <xl-button
        type="text"
      >
        <button
          className="xl-button xl-button--text xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
    </div>
  </xl-button-group>
  <xl-button-group
    round={true}
    vertical={true}
  >
    <div
      className="xl-button-group xl-button-group--vertical xl-button-group--round"
    >
      <xl-button>
        <button
          className="xl-button xl-button--default xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Default
          </span>
        </button>
      </xl-button>
      <xl-button
        type="primary"
      >
        <button
          className="xl-button xl-button--primary xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Primary
          </span>
        </button>
      </xl-button>
      <xl-button
        type="success"
      >
        <button
          className="xl-button xl-button--success xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Success
          </span>
        </button>
      </xl-button>
      <xl-button
        type="warning"
      >
        <button
          className="xl-button xl-button--warning xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Warning
          </span>
        </button>
      </xl-button>
      <xl-button
        type="error"
      >
        <button
          className="xl-button xl-button--error xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
      <xl-button
        type="text"
      >
        <button
          className="xl-button xl-button--text xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
    </div>
  </xl-button-group>
  <xl-button-group
    size="small"
    vertical={true}
  >
    <div
      className="xl-button-group xl-button-group--vertical"
    >
      <xl-button>
        <button
          className="xl-button xl-button--default xl-button--size-small"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Default
          </span>
        </button>
      </xl-button>
      <xl-button
        type="primary"
      >
        <button
          className="xl-button xl-button--primary xl-button--size-small"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Primary
          </span>
        </button>
      </xl-button>
      <xl-button
        type="success"
      >
        <button
          className="xl-button xl-button--success xl-button--size-small"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Success
          </span>
        </button>
      </xl-button>
      <xl-button
        type="warning"
      >
        <button
          className="xl-button xl-button--warning xl-button--size-small"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Warning
          </span>
        </button>
      </xl-button>
      <xl-button
        type="error"
      >
        <button
          className="xl-button xl-button--error xl-button--size-small"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
      <xl-button
        type="text"
      >
        <button
          className="xl-button xl-button--text xl-button--size-small"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
    </div>
  </xl-button-group>
  <xl-button-group
    size="default"
    vertical={true}
  >
    <div
      className="xl-button-group xl-button-group--vertical"
    >
      <xl-button>
        <button
          className="xl-button xl-button--default xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Default
          </span>
        </button>
      </xl-button>
      <xl-button
        type="primary"
      >
        <button
          className="xl-button xl-button--primary xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Primary
          </span>
        </button>
      </xl-button>
      <xl-button
        type="success"
      >
        <button
          className="xl-button xl-button--success xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Success
          </span>
        </button>
      </xl-button>
      <xl-button
        type="warning"
      >
        <button
          className="xl-button xl-button--warning xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Warning
          </span>
        </button>
      </xl-button>
      <xl-button
        type="error"
      >
        <button
          className="xl-button xl-button--error xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
      <xl-button
        type="text"
      >
        <button
          className="xl-button xl-button--text xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
    </div>
  </xl-button-group>
  <xl-button-group
    size="large"
    vertical={true}
  >
    <div
      className="xl-button-group xl-button-group--vertical"
    >
      <xl-button>
        <button
          className="xl-button xl-button--default xl-button--size-large"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Default
          </span>
        </button>
      </xl-button>
      <xl-button
        type="primary"
      >
        <button
          className="xl-button xl-button--primary xl-button--size-large"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Primary
          </span>
        </button>
      </xl-button>
      <xl-button
        type="success"
      >
        <button
          className="xl-button xl-button--success xl-button--size-large"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Success
          </span>
        </button>
      </xl-button>
      <xl-button
        type="warning"
      >
        <button
          className="xl-button xl-button--warning xl-button--size-large"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Warning
          </span>
        </button>
      </xl-button>
      <xl-button
        type="error"
      >
        <button
          className="xl-button xl-button--error xl-button--size-large"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
      <xl-button
        type="text"
      >
        <button
          className="xl-button xl-button--text xl-button--size-large"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
    </div>
  </xl-button-group>
</div>
`;

exports[`ButtonGroup 水平按钮组 1`] = `
<div>
  <xl-button-group>
    <div
      className="xl-button-group xl-button-group--horizontal"
    >
      <xl-button>
        <button
          className="xl-button xl-button--default xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Default
          </span>
        </button>
      </xl-button>
      <xl-button
        type="primary"
      >
        <button
          className="xl-button xl-button--primary xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Primary
          </span>
        </button>
      </xl-button>
      <xl-button
        type="success"
      >
        <button
          className="xl-button xl-button--success xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Success
          </span>
        </button>
      </xl-button>
      <xl-button
        type="warning"
      >
        <button
          className="xl-button xl-button--warning xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Warning
          </span>
        </button>
      </xl-button>
      <xl-button
        type="error"
      >
        <button
          className="xl-button xl-button--error xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
      <xl-button
        type="text"
      >
        <button
          className="xl-button xl-button--text xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
    </div>
  </xl-button-group>
  <xl-button-group
    round={true}
  >
    <div
      className="xl-button-group xl-button-group--horizontal xl-button-group--round"
    >
      <xl-button>
        <button
          className="xl-button xl-button--default xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Default
          </span>
        </button>
      </xl-button>
      <xl-button
        type="primary"
      >
        <button
          className="xl-button xl-button--primary xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Primary
          </span>
        </button>
      </xl-button>
      <xl-button
        type="success"
      >
        <button
          className="xl-button xl-button--success xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Success
          </span>
        </button>
      </xl-button>
      <xl-button
        type="warning"
      >
        <button
          className="xl-button xl-button--warning xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Warning
          </span>
        </button>
      </xl-button>
      <xl-button
        type="error"
      >
        <button
          className="xl-button xl-button--error xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
      <xl-button
        type="text"
      >
        <button
          className="xl-button xl-button--text xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
    </div>
  </xl-button-group>
  <xl-button-group
    size="small"
  >
    <div
      className="xl-button-group xl-button-group--horizontal"
    >
      <xl-button>
        <button
          className="xl-button xl-button--default xl-button--size-small"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Default
          </span>
        </button>
      </xl-button>
      <xl-button
        type="primary"
      >
        <button
          className="xl-button xl-button--primary xl-button--size-small"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Primary
          </span>
        </button>
      </xl-button>
      <xl-button
        type="success"
      >
        <button
          className="xl-button xl-button--success xl-button--size-small"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Success
          </span>
        </button>
      </xl-button>
      <xl-button
        type="warning"
      >
        <button
          className="xl-button xl-button--warning xl-button--size-small"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Warning
          </span>
        </button>
      </xl-button>
      <xl-button
        type="error"
      >
        <button
          className="xl-button xl-button--error xl-button--size-small"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
      <xl-button
        type="text"
      >
        <button
          className="xl-button xl-button--text xl-button--size-small"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
    </div>
  </xl-button-group>
  <xl-button-group
    size="default"
  >
    <div
      className="xl-button-group xl-button-group--horizontal"
    >
      <xl-button>
        <button
          className="xl-button xl-button--default xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Default
          </span>
        </button>
      </xl-button>
      <xl-button
        type="primary"
      >
        <button
          className="xl-button xl-button--primary xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Primary
          </span>
        </button>
      </xl-button>
      <xl-button
        type="success"
      >
        <button
          className="xl-button xl-button--success xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Success
          </span>
        </button>
      </xl-button>
      <xl-button
        type="warning"
      >
        <button
          className="xl-button xl-button--warning xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Warning
          </span>
        </button>
      </xl-button>
      <xl-button
        type="error"
      >
        <button
          className="xl-button xl-button--error xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
      <xl-button
        type="text"
      >
        <button
          className="xl-button xl-button--text xl-button--size-default"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
    </div>
  </xl-button-group>
  <xl-button-group
    size="large"
  >
    <div
      className="xl-button-group xl-button-group--horizontal"
    >
      <xl-button>
        <button
          className="xl-button xl-button--default xl-button--size-large"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Default
          </span>
        </button>
      </xl-button>
      <xl-button
        type="primary"
      >
        <button
          className="xl-button xl-button--primary xl-button--size-large"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Primary
          </span>
        </button>
      </xl-button>
      <xl-button
        type="success"
      >
        <button
          className="xl-button xl-button--success xl-button--size-large"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Success
          </span>
        </button>
      </xl-button>
      <xl-button
        type="warning"
      >
        <button
          className="xl-button xl-button--warning xl-button--size-large"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Warning
          </span>
        </button>
      </xl-button>
      <xl-button
        type="error"
      >
        <button
          className="xl-button xl-button--error xl-button--size-large"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
      <xl-button
        type="text"
      >
        <button
          className="xl-button xl-button--text xl-button--size-large"
          onClick={[Function]}
        >
          <span
            key=".0"
          >
            Error
          </span>
        </button>
      </xl-button>
    </div>
  </xl-button-group>
</div>
`;

exports[`ButtonGroup 设置size的优先级 1`] = `
<xl-button-group
  size="large"
>
  <div
    className="xl-button-group xl-button-group--horizontal"
  >
    <xl-button
      size="small"
    >
      <button
        className="xl-button xl-button--default xl-button--size-large"
        onClick={[Function]}
      >
        <span
          key=".0"
        >
          Default
        </span>
      </button>
    </xl-button>
    <xl-button
      type="text"
    >
      <button
        className="xl-button xl-button--text xl-button--size-large"
        onClick={[Function]}
      >
        <span
          key=".0"
        >
          Error
        </span>
      </button>
    </xl-button>
  </div>
</xl-button-group>
`;
